...
    <string name="contact_via_email">Send an email for support, feedback, or suggestions</string>
    <string name="choose_default_password_length">Choose Default Password Length</string>
    <string name="choose_default_password_length_desc">This length will be used as default when generating new passwords. Longer passwords provide better security.</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="password_account">Password Account</string>
    <string name="api_key_account">API Key Account</string>
    <string name="create_api_key">Create API Key</string>
    <string name="edit_api_key">Edit API Key</string>

</resources>


