...
        onDeleteAccount
    )
}

@Composable
fun FABAddAccount(onSaveClicked: () -> Unit) {
    FloatingActionButton(modifier = Modifier.testTag("save"), onClick = onSaveClicked) {
        Icon(
            painter = rememberVectorPainter(image = Icons.Rounded.Done),
            contentDescription = "Save Changes"
        )
    }
}
...
